--- a/package.json
+++ b/package.json
@@ -8,13 +8,25 @@
     "start": "next start"
   },
   "dependencies": {
+    "@maxmind/geoip2-node": "^2.3.2",
+    "axios": "^0.21.1",
+    "moment": "^2.29.1",
     "next": "10.2.2",
+    "next-secure-headers": "^2.2.0",
+    "next-seo": "^4.24.0",
+    "nodemailer": "^6.6.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-gtm-module": "^2.0.11",
+    "react-hook-form": "^7.6.6",
+    "reactjs-popup": "^2.0.4",
+    "truncate": "^2.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^15.6.0",
     "@types/react": "^17.0.6",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "sass": "^1.33.0",
     "typescript": "^4.2.4"
   }
