--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
   },
   "dependencies": {
     "@maxmind/geoip2-node": "^2.3.2",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "loadjs": "^4.2.0",
     "moment": "^2.29.1",
-    "next": "10.2.2",
+    "next": "^11.1.2",
     "next-secure-headers": "^2.2.0",
-    "next-seo": "^4.24.0",
-    "nodemailer": "^6.6.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next-seo": "^4.26.0",
+    "nodemailer": "^6.6.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-gtm-module": "^2.0.11",
-    "react-hook-form": "^7.6.6",
-    "reactjs-popup": "^2.0.4",
+    "react-hook-form": "^7.15.1",
+    "reactjs-popup": "^2.0.5",
     "truncate": "^2.1.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/node": "^15.6.0",
-    "@types/react": "^17.0.6",
+    "@types/node": "^15.14.9",
+    "@types/react": "^17.0.20",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "sass": "^1.33.0",
-    "typescript": "^4.2.4"
+    "sass": "^1.39.0",
+    "typescript": "^4.4.2"
   }
 }
